--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@nuxtjs/google-fonts": "3.2.0",
     "axios": "^1.8.1",
+    "lucide-vue-next": "^0.476.0",
     "nuxt": "^3.15.4",
+    "nuxt-lucide-icons": "1.0.5",
     "vue": "latest",
     "vue-router": "latest"
   },
